eks/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-test
  namespace: app
  labels:
    app: load-test
    load: any
spec:
  selector:
    matchLabels:
      app: load-test
      load: any
  template:
    metadata:
      labels:
        app: load-test
        load: any
    spec:
      nodeSelector: {
        role: worker
      }
      containers:
      - name: load-test
        image: 301129966109.dkr.ecr.us-east-2.amazonaws.com/nodeexample
        imagePullPolicy: Always
        ports:
        - name: m-http
          containerPort: 3000
        resources: 
          requests: 
            cpu: 170m
            memory: 130Mi
          limits:
            cpu: 200m
            memory: 150Mi
