eks/application/node-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-test
  namespace: app
  labels:
    app: load-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: load-test
  template:
    metadata:
      labels:
        app: load-test
    spec:
      containers:
      - name: load-test
        image: 301129966109.dkr.ecr.us-east-2.amazonaws.com/nodeexample
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources: 
          requests: 
            cpu: 50m
          limits: 
            cpu: 100m

---
apiVersion: v1
kind: Service
metadata:
  name: load-test-service
  namespace: app
spec:
  selector:
    app: load-test
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: load-test-service-load-high
  namespace: app
spec:
  selector:
    app: load-test
    load: "high"
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: load-test-service-load-low
  namespace: app
spec:
  selector:
    app: load-test
    load: "low"
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
