eks/application/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-test-service
  namespace: app
  labels:
    app.kubernetes.io/name: prometheus
spec:
  selector:
    app: load-test
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: load-test-service-load-high
  namespace: app
  labels:
    app.kubernetes.io/name: prometheus
spec:
  selector:
    app: load-test
    load: "high"
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: load-test-service-load-low
  namespace: app
  labels:
    app.kubernetes.io/name: prometheus
spec:
  selector:
    app: load-test
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
